--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 	  <meta charset="utf-8">
-	  <title>ENM Movie History</title>
+	  <title>Moviebuff</title>
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap-star-rating/css/star-rating.min.css">
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/seiyria-bootstrap-slider/css/bootstrap-slider.css">
@@ -15,17 +15,19 @@
 		<div id="login-page">
 			<div class="wrapper">
 				<div class="container">
-					<h1>Welcome to Movie Time</h1>
+					<h1 id='title'>Welcome to Moviebuff</h1>
 					<form class="form">
 						<input id="user-email" type="text" placeholder="Email">
 						<input id="user-password" type="password" placeholder="Password">
 						<button id="register-button">Register</button>
 						<button id="login-button">Login</button>
 					</form>
+					<h3><strong>Important: </strong></h3>
+					<h4>Movie Buff is currently <span class='emphasize'>NOT SECURE.</span> Please register with a fake email and password to demo the app!</h4>
 					<!-- ALERT BOX -->
 					<div id="alert" class="alert" role="alert">
-         				<h4 id="alert-title">You are not logged in</h4>
-        				<p id="alert-detail"></p>
+       				<h4 id="alert-title">You are not logged in</h4>
+      				<p id="alert-detail"></p>
     				</div>
 				</div>
 			</div>
