--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 	  <meta charset="utf-8">
-	  <title>Moviebuff</title>
+	  <title>Movie buff</title>
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap-star-rating/css/star-rating.min.css">
 	  <link rel="stylesheet" type="text/css" href="lib/bower_components/seiyria-bootstrap-slider/css/bootstrap-slider.css">
@@ -15,7 +15,7 @@
 		<div id="login-page">
 			<div class="wrapper">
 				<div class="container">
-					<h1 id='title'>Welcome to Moviebuff</h1>
+					<h1 id='title'>Welcome to Movie Buff</h1>
 					<form class="form">
 						<input id="user-email" type="text" placeholder="Email">
 						<input id="user-password" type="password" placeholder="Password">
